--- a/Milestone 4/style.css
+++ b/Milestone 4/style.css
@@ -29,7 +29,7 @@
 .col-left{
   width: 35%;
   height: 100%;
-  min-width: 200px;
+  min-width: 280px;
   border-right: 0.5px solid lightgray;
 }
 
@@ -115,9 +115,14 @@ img{
   color: #b1b1b1;
 }
 
+.info span{
+  font-size: 0.7rem;
+}
+
 .in-ric i{
-  padding: 5px 20px;
+  padding: 5px 20px 5px 10px;
   cursor: pointer;
+  width: 5%;
 }
 
 .in-ric input{
