--- a/Milestone 5 in lavorazione/style.css
+++ b/Milestone 5 in lavorazione/style.css
@@ -197,7 +197,7 @@ img{
 
 .sent{
   background-color: #d5f9ba;
-  padding: 10px;
+  padding: 15px;
   margin-bottom: 10px;
   width: 40%;
   align-self: flex-end;
@@ -205,6 +205,7 @@ img{
   border-radius: 5px;
   display: flex;
   flex-direction: column;
+  overflow-wrap: break-word;
 }
 
 .time{
@@ -215,7 +216,7 @@ img{
 }
 
 .received{
-  padding: 10px;
+  padding: 15px;
   background-color: white;
   width: 40%;
   margin-bottom: 10px;
@@ -223,6 +224,7 @@ img{
   border-radius: 5px;
   display: flex;
   flex-direction: column;
+  overflow-wrap: break-word;
 }
 
 .msg{
